--- a/index.html
+++ b/index.html
@@ -360,8 +360,10 @@
           <div class="relative group">
             <div class="absolute transition-all duration-300 opacity-0 -inset-3 rounded-2xl group-hover:opacity-100 blur-xl" style="background: linear-gradient(135deg, #2d8cff, #0b5cff);"></div>
             <div class="relative flex items-center gap-3 px-6 py-4 transition-all duration-300 rounded-xl group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
-              <svg class="text-blue-500 transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M5.033 13.9a.743.743 0 0 1-.745-.743V8.608c0-.41.333-.743.745-.743h5.763c.411 0 .744.333.744.743v4.549c0 .41-.333.743-.744.743H5.033zm8.837 2.365a.743.743 0 0 1-.745-.743v-8.11c0-.41.334-.743.745-.743h5.763c.411 0 .745.333.745.743v8.11c0 .41-.334.743-.745.743H13.87z"/>
+              <svg class="transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" aria-hidden="true">
+                <rect x="2" y="2" width="20" height="20" rx="5" fill="#2D8CFF"/>
+                <path d="M7.4 8.3h6.4a2.1 2.1 0 0 1 2.1 2.1v3.2a2.1 2.1 0 0 1-2.1 2.1H7.4a2.1 2.1 0 0 1-2.1-2.1v-3.2a2.1 2.1 0 0 1 2.1-2.1z" fill="#fff"/>
+                <path d="M15.7 10.1l3-1.6v7l-3-1.6v-3.8z" fill="#fff"/>
               </svg>
               <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Zoom</span>
             </div>
@@ -371,8 +373,12 @@
           <div class="relative group">
             <div class="absolute transition-all duration-300 opacity-0 -inset-3 rounded-2xl group-hover:opacity-100 blur-xl" style="background: linear-gradient(135deg, #00e676, #00c853);"></div>
             <div class="relative flex items-center gap-3 px-6 py-4 transition-all duration-300 rounded-xl group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
-              <svg class="text-green-500 transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.82 16.32c-.193.39-.588.65-1.03.65H7.21c-.442 0-.837-.26-1.03-.65L4.5 12l1.68-4.32c.193-.39.588-.65 1.03-.65h9.58c.442 0 .837.26 1.03.65L19.5 12l-1.68 4.32z"/>
+              <svg class="transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" aria-hidden="true">
+                <rect x="4" y="7" width="10" height="10" rx="2" fill="#34A853"/>
+                <rect x="6.2" y="9.2" width="5.6" height="5.6" rx="1.2" fill="#fff"/>
+                <path d="M14 9.2l5-3v11.6l-5-3v-5.6z" fill="#4285F4"/>
+                <rect x="2.2" y="8.4" width="2.8" height="7.2" rx="1" fill="#EA4335"/>
+                <rect x="6" y="17" width="6.8" height="2.6" rx="1.3" fill="#FBBC04"/>
               </svg>
               <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Meet</span>
             </div>
@@ -382,8 +388,12 @@
           <div class="relative group">
             <div class="absolute transition-all duration-300 opacity-0 -inset-3 rounded-2xl group-hover:opacity-100 blur-xl" style="background: linear-gradient(135deg, #6264a7, #464eb8);"></div>
             <div class="relative flex items-center gap-3 px-6 py-4 transition-all duration-300 rounded-xl group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
-              <svg class="text-indigo-500 transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M19.198 10.875c-.87 0-1.585.71-1.585 1.585v3.17c0 .875.715 1.585 1.585 1.585.875 0 1.585-.71 1.585-1.585v-3.17c0-.875-.71-1.585-1.585-1.585zm-5.425 4.905c-.875 0-1.585-.71-1.585-1.585v-3.17c0-.875.71-1.585 1.585-1.585.87 0 1.585.71 1.585 1.585v3.17c0 .875-.715 1.585-1.585 1.585zM5 0C2.25 0 0 2.25 0 5v14c0 2.75 2.25 5 5 5h14c2.75 0 5-2.25 5-5V5c0-2.75-2.25-5-5-5H5z"/>
+              <svg class="transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" aria-hidden="true">
+                <rect x="2" y="5" width="12" height="14" rx="3" fill="#6264A7"/>
+                <rect x="10" y="7" width="12" height="12" rx="3" fill="#464EB8"/>
+                <circle cx="17" cy="9" r="3" fill="#7B83EB"/>
+                <circle cx="18" cy="15" r="3" fill="#8B8CF8"/>
+                <path d="M5.5 9h5v2H9v6H7v-6H5.5z" fill="#fff"/>
               </svg>
               <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Teams</span>
             </div>
@@ -393,8 +403,8 @@
           <div class="relative group">
             <div class="absolute transition-all duration-300 opacity-0 -inset-3 rounded-2xl group-hover:opacity-100 blur-xl" style="background: linear-gradient(135deg, #5865f2, #7289da);"></div>
             <div class="relative flex items-center gap-3 px-6 py-4 transition-all duration-300 rounded-xl group-hover:scale-105" style="background: rgba(26, 31, 46, 0.5); border: 1px solid var(--border-primary); backdrop-filter: blur(10px);">
-              <svg class="text-indigo-400 transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+              <svg class="text-indigo-400 transition-transform duration-300 w-7 h-7 group-hover:scale-110" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
               </svg>
               <span class="text-sm font-semibold transition-colors duration-300" style="color: var(--text-secondary);">Discord</span>
             </div>
